@@ -9,6 +9,7 @@ import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.tradista.core.common.exception.TradistaTechnicalException;
+import org.eclipse.tradista.core.common.exception.TradistaBusinessException;
 import org.eclipse.tradista.core.common.ui.controller.TradistaControllerAdapter;
 import org.eclipse.tradista.core.common.ui.util.TradistaGUIUtil;
 import org.eclipse.tradista.core.common.ui.view.TradistaAlert;
@@ -78,7 +79,7 @@ public class LegalEntityReportController extends TradistaControllerAdapter {
 		description.setCellValueFactory(cellData -> cellData.getValue().getDescription());
 		role.setCellValueFactory(cellData -> cellData.getValue().getRole());
 		TradistaGUIUtil.fillComboBox(
-				Arrays.asList(LegalEntity.Role.values()).stream().map(t -> t.toString()).collect(Collectors.toList()),
+				Arrays.asList(LegalEntity.Role.values()).stream().map(LegalEntity.Role::toString).toList(),
 				roleComboBox);
 		roleComboBox.getItems().add(0, StringUtils.EMPTY);
 		roleComboBox.getSelectionModel().selectFirst();
@@ -108,8 +109,14 @@ public class LegalEntityReportController extends TradistaControllerAdapter {
 		if (!roleComboBox.getValue().isEmpty()) {
 			role = LegalEntity.Role.getRole(roleComboBox.getValue());
 		}
-		Set<LegalEntity> legalEntities = legalEntityBusinessDelegate
-				.getLegalEntitiesByShortNameAndRole("%" + shortNameTextField.getText() + "%", role);
+		Set<LegalEntity> legalEntities = null;
+		try {
+			legalEntities = legalEntityBusinessDelegate
+					.getLegalEntitiesByShortNameAndRole("%" + shortNameTextField.getText() + "%", role);
+		} catch (TradistaBusinessException | TradistaTechnicalException te) {
+			TradistaAlert alert = new TradistaAlert(AlertType.ERROR, te.getMessage());
+			alert.showAndWait();
+		}
 
 		if (legalEntities != null) {
 			if (!legalEntities.isEmpty()) {
